--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="overlay_popup.App"
+﻿<Application x:Class="PowerOverlay.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:overlay_popup"
+             xmlns:local="clr-namespace:PowerOverlay"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
