--- a/ConfigurationWindow.xaml
+++ b/ConfigurationWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="overlay_popup.ConfigurationWindow"
+﻿<Window x:Class="PowerOverlay.ConfigurationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:overlay_popup" d:DataContext="{d:DesignInstance Type=local:ConfigurationViewModel}"
+        xmlns:local="clr-namespace:PowerOverlay" d:DataContext="{d:DesignInstance Type=local:ConfigurationViewModel}"
         mc:Ignorable="d"
         Title="Configure" Height="800" Width="1200" WindowState="Maximized">
     <DockPanel Margin="5">
