--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="overlay_popup.MainWindow"
+﻿<Window x:Class="PowerOverlay.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:overlay_popup"
+        xmlns:local="clr-namespace:PowerOverlay"
         mc:Ignorable="d"
         Title="Power Overlay" Height="450" Width="800"
         WindowStyle="none"
